Bibelstellen umsortiert, ergänzt

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -223,10 +223,6 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C21" target="_blank">Matthäus 21,21 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Da sagte Jesus: »Du glaubst, weil du mich gesehen hast. Wie glücklich können sich erst die schätzen, die mich nicht sehen und trotzdem glauben!«</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes20%2C29" target="_blank">Johannes 20,29 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">Hört auf, euch Sorgen zu machen um euer Essen und Trinken oder um eure Kleidung. Warum wollt ihr leben wie die Menschen, die Gott nicht kennen und diese Dinge so wichtig nehmen? Euer himmlischer Vater kennt eure Bedürfnisse. Macht das Reich Gottes zu eurem wichtigsten Anliegen, lebt in Gottes Gerechtigkeit, und er wird euch all das geben, was ihr braucht.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us6%2C31-33" target="_blank">Matthäus 6,31-33 (NLB)</a></div>
 					</div>
@@ -243,6 +239,14 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser4%2C13" target="_blank">Epheser 4,13 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6" target="_blank">Philipper 4,6 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gott allein kann euch davor bewahren, vom rechten Weg abzuirren. So könnt ihr von Schuld befreit und voller Freude vor ihn treten und ihn in seiner Herrlichkeit sehen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Judas24" target="_blank">Judas 24 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Der HERR wird für euch kämpfen, ihr selbst braucht gar nichts zu tun.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Mose14%2C14" target="_blank">2.Mose 14,14 (GNB)</a></div>
 					</div>
@@ -251,12 +255,8 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja55%2C10-11" target="_blank">Jesaja 55,10-11 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Gott allein kann euch davor bewahren, vom rechten Weg abzuirren. So könnt ihr von Schuld befreit und voller Freude vor ihn treten und ihn in seiner Herrlichkeit sehen.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Judas24" target="_blank">Judas 24 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6" target="_blank">Philipper 4,6 (GNB)</a></div>
+						<div class="text">Da sagte Jesus: »Du glaubst, weil du mich gesehen hast. Wie glücklich können sich erst die schätzen, die mich nicht sehen und trotzdem glauben!«</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes20%2C29" target="_blank">Johannes 20,29 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
@@ -285,8 +285,8 @@
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Epheser2%2C10" target="_blank">Epheser 2,10 (NeÜ)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Strengt euch deshalb an, diese Zusagen Gottes in eurem Glauben zu leben. Dann zeigt sich euer Glaube durch ein vorbildliches Leben. Ein vorbildliches Leben aber führt zur tieferen Erkenntnis Gottes. Aus der Erkenntnis Gottes folgt Selbstbeherrschung. Aus der Selbstbeherrschung wächst Geduld und aus der Geduld ein Leben im Glauben zur Ehre Gottes. Aus der Ehrfurcht vor Gott entspringt die Liebe zu den Gläubigen, und aus dieser schließlich die Liebe zu allen Menschen. Je mehr ihr in dieser Hinsicht vorankommt, desto mehr werdet ihr mithilfe der Erkenntnis von Jesus Christus, unserem Herrn, ein sinnvolles, auf andere ausstrahlendes Leben führen.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/NLB/2.Petrus1" target="_blank">2.Petrus 1,5-8 (NLB)</a></div>
+						<div class="text">Helft euch gegenseitig bei euren Schwierigkeiten und Problemen, so erfüllt ihr das Gesetz, das wir von Christus haben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Galater6%2C2" target="_blank">Galater 6,2 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Werdet barmherzig, so wie euer Vater barmherzig ist! Verurteilt nicht andere, dann wird Gott auch euch nicht verurteilen. Sitzt über niemand zu Gericht, dann wird Gott auch über euch nicht zu Gericht sitzen. Verzeiht, dann wird Gott euch verzeihen. Schenkt, dann wird Gott euch schenken; ja, er wird euch so überreich beschenken, dass ihr gar nicht alles fassen könnt. Darum gebraucht anderen gegenüber ein reichliches Maß; denn Gott wird bei euch dasselbe Maß verwenden.</div>
@@ -294,19 +294,19 @@
 					</div>
 					<div class="moreinfo">
 						<div class="text">Teilt euer Brot mit den Hungrigen, nehmt Obdachlose bei euch auf, und wenn ihr einem begegnet, der in Lumpen herumläuft, gebt ihm Kleider! Helft, wo ihr könnt, und verschließt eure Augen nicht vor den Nöten eurer Mitmenschen!</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C7" target="_blank">Jesaja 58:7 (HFA)</a></div> <!-- ist auch bei Gottesdienst -->
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C7" target="_blank">Jesaja 58:7 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Tut alles ohne Murren und Diskussion, damit euch niemand Vorwürfe machen kann. Als untadelige Kinder Gottes sollt ihr wie Himmelslichter mitten unter den verdrehten und verdorbenen Menschen dieser Welt leuchten</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Philipper2%2C14-15" target="_blank">Philipper 2,14-15 (NeÜ)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Du glaubst, dass es nur einen einzigen Gott gibt? Schön und gut. Aber das glauben sogar die Dämonen – und zittern vor Angst. Wann endlich wirst du törichter Mensch einsehen, dass der Glaube nichts wert ist, wenn wir nicht auch tun, was Gott von uns will?</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus2%2C19-20" target="_blank">Jakobus 2,19-20 (HFA)</a></div>
+						<div class="text">Strengt euch deshalb an, diese Zusagen Gottes in eurem Glauben zu leben. Dann zeigt sich euer Glaube durch ein vorbildliches Leben. Ein vorbildliches Leben aber führt zur tieferen Erkenntnis Gottes. Aus der Erkenntnis Gottes folgt Selbstbeherrschung. Aus der Selbstbeherrschung wächst Geduld und aus der Geduld ein Leben im Glauben zur Ehre Gottes. Aus der Ehrfurcht vor Gott entspringt die Liebe zu den Gläubigen, und aus dieser schließlich die Liebe zu allen Menschen. Je mehr ihr in dieser Hinsicht vorankommt, desto mehr werdet ihr mithilfe der Erkenntnis von Jesus Christus, unserem Herrn, ein sinnvolles, auf andere ausstrahlendes Leben führen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/2.Petrus1" target="_blank">2.Petrus 1,5-8 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Helft euch gegenseitig bei euren Schwierigkeiten und Problemen, so erfüllt ihr das Gesetz, das wir von Christus haben.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/NLB/Galater6%2C2" target="_blank">Galater 6,2 (NLB)</a></div>
+						<div class="text">Du glaubst, dass es nur einen einzigen Gott gibt? Schön und gut. Aber das glauben sogar die Dämonen – und zittern vor Angst. Wann endlich wirst du törichter Mensch einsehen, dass der Glaube nichts wert ist, wenn wir nicht auch tun, was Gott von uns will?</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus2%2C19-20" target="_blank">Jakobus 2,19-20 (HFA)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
@@ -357,11 +357,11 @@
 						<div class="text">Wenn sich einer also etwas auf sein Wissen einbildet, so weiß er gerade nicht, worauf es ankommt. Wer aber Gott liebt, dem wendet sich Gott in Liebe zu.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther8%2C2-3" target="_blank">1.Korinther 8,2-3 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Oder habt ihr etwa vergessen, dass euer Körper ein Tempel des Heiligen Geistes ist, der in euch wohnt und den euch Gott gegeben hat? Ihr gehört also nicht mehr euch selbst. Gott hat euch freigekauft, damit ihr ihm gehört; lebt deshalb so, dass ihr mit eurem Körper Gott Ehre bereitet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther6%2C19-20" target="_blank">1.Korinther 6,19-20 (HFA)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
@@ -379,14 +379,6 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
-						<div class="text">Der Herr hat gesagt: »Dieses Volk da behauptet, mich zu ehren. Aber sie ehren mich nur mit Worten, mit dem Herzen sind sie weit weg von mir. Ihr ganzer Gottesdienst ist sinnlos, denn er besteht nur in der Befolgung von Vorschriften, die Menschen sich ausgedacht haben.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja29%2C13" target="_blank">Jesaja 29,13< (GNB)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">Der HERR sagt: »Ich hasse eure Feste und kann eure Feiern nicht ausstehen. Eure Brandopfer und Speiseopfer sind mir zuwider; das gemästete Vieh, das ihr für das Opfermahl schlachtet, kann ich nicht mehr sehen. Hört auf mit dem Geplärr eurer Lieder! Euer Harfengeklimper ist mir lästig! Sorgt lieber dafür, dass jeder zu seinem Recht kommt! Recht und Gerechtigkeit sollen das Land erfüllen wie ein Strom, der nie austrocknet.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Amos5%2C21-24" target="_blank">Amos 5,21-24 (GNB)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">Ich will, dass ihr barmherzig seid; eure Opfer will ich nicht. Mir geht es darum, dass ihr meinen Willen erkennt, und nicht darum, dass ihr mir Brandopfer bringt.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hosea6%2C6" target="_blank">Hosea 6,6 (NLB)</a></div>
 					</div>
@@ -399,9 +391,19 @@
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Sacharja7%2C9-10" target="_blank">Sacharja 7,9-10 (NeÜ)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Der Herr hat gesagt: »Dieses Volk da behauptet, mich zu ehren. Aber sie ehren mich nur mit Worten, mit dem Herzen sind sie weit weg von mir. Ihr ganzer Gottesdienst ist sinnlos, denn er besteht nur in der Befolgung von Vorschriften, die Menschen sich ausgedacht haben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja29%2C13" target="_blank">Jesaja 29,13< (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Der HERR sagt: »Ich hasse eure Feste und kann eure Feiern nicht ausstehen. Eure Brandopfer und Speiseopfer sind mir zuwider; das gemästete Vieh, das ihr für das Opfermahl schlachtet, kann ich nicht mehr sehen. Hört auf mit dem Geplärr eurer Lieder! Euer Harfengeklimper ist mir lästig! Sorgt lieber dafür, dass jeder zu seinem Recht kommt! Recht und Gerechtigkeit sollen das Land erfüllen wie ein Strom, der nie austrocknet.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Amos5%2C21-24" target="_blank">Amos 5,21-24 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
 						<div class="text">Ihr fastet zwar, aber gleichzeitig zankt und streitet ihr und schlagt mit roher Faust zu. Wenn das ein Fasten sein soll, dann höre ich eure Gebete nicht! Denkt ihr, mir einen Gefallen zu tun, wenn ihr bloß auf Essen und Trinken verzichtet, den Kopf hängen lasst und euch in Trauergewändern in die Asche setzt? Nennt ihr so etwas ›Fasten‹? Ist das ein Tag, an dem ich, der HERR, Freude habe? Nein – ein Fasten, das mir gefällt, sieht anders aus: Löst die Fesseln der Menschen, die man zu Unrecht gefangen hält, befreit sie vom drückenden Joch der Sklaverei und gebt ihnen ihre Freiheit wieder! Schafft jede Art von Unterdrückung ab! Teilt euer Brot mit den Hungrigen, nehmt Obdachlose bei euch auf, und wenn ihr einem begegnet, der in Lumpen herumläuft, gebt ihm Kleider! Helft, wo ihr könnt, und verschließt eure Augen nicht vor den Nöten eurer Mitmenschen!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C4-7" target="_blank">Jesaja 58,3-7 (HFA)</a></div>
 					</div>
+					-->
 				</div>
 			</div>
 			<div class="btnframe">
@@ -425,6 +427,10 @@
 						<div class="text">Gebt also jedem, was ihr ihm schuldig seid! Wem Steuern zustehen, dem zahlt Steuern, wem Zoll zusteht, dem zahlt Zoll. Wem Respekt zusteht, dem erweist Respekt, und wem Ehre zusteht, dem erweist Ehre.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/R%C3%B6mer13%2C7" target="_blank">Römer 13,7 (GNB)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Ihr sollt Gott nicht lästern und ein Oberhaupt eures Volkes nicht verfluchen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Mose22%2C27" target="_blank">2.Mose 22,27 (GNB)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text">Er muss Menschen nicht erst lange verhören und sie zu sich laden vor Gericht – nein, ohne Verhandlung stürzt er die Mächtigen und setzt andere an ihrer Stelle ein.</div>
@@ -445,14 +451,12 @@
 						<div class="text">Er stürzt Herrscher von ihrem Thron, Unterdrückte aber richtet er auf.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas1%2C52" target="_blank">Lukas 1,52 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Sofort befahl der Hohe Priester Hananias denen, die neben Paulus standen, ihn auf den Mund zu schlagen. Doch Paulus erwiderte: »Gott wird dich schlagen, du getünchte Wand! Was für ein Richter bist du denn, wenn du selbst das Gesetz brichst, indem du mich schlagen lässt?« Die, die neben Paulus standen, sagten zu ihm: »Ist das die Art, wie man mit einem Hohen Priester spricht?« »Es tut mir leid, Brüder. Ich wusste nicht, dass er der Hohe Priester ist«, entgegnete Paulus, »denn in der Schrift heißt es: ›Eine führende Persönlichkeit deines Volkes sollst du nicht beschimpfen.‹«</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Apostelgeschichte23%2C2-5" target="_blank">Apostelgeschichte 23,2-5 (NLB)</a> (siehe auch <a href="https://www.bibleserver.com/NLB/2.Mose22%2C27" target="_blank">2.Mose 22,27</a>)</div>
 					</div>
-					<div class="moreinfo">
-						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
-					</div>
+					-->
 					<div class="moreinfo">
 						<div class="text">Obwohl er Gottes Sohn war, hat er an dem, was er durchmachen musste, gelernt, was Gehorsam bedeutet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er5%2C8" target="_blank">Hebräer 5,8 (NeÜ)</a></div>
@@ -535,14 +539,34 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C17" target="_blank">Kolosser 3,17 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Doch wenn ihr bereit seid, wirklich zu hören, dann sage ich euch: Liebt eure Feinde. Tut denen Gutes, die euch hassen. Betet für das Glück derer, die euch verfluchen. Betet für die, die euch verletzen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C27-28" target="_blank">Lukas 6:27-28 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wenn jemand dich auf die eine Wange schlägt, dann halte ihm auch die andere hin. Wenn jemand deinen Mantel will, biete ihm auch dein Hemd an. Wer dich bittet, dem gib, was du hast; und wenn dir etwas weggenommen wird, versuche nicht, es wiederzubekommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C29-30" target="_blank">Lukas 6:29-30 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Behandle andere so, wie du von ihnen behandelt werden möchtest.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C31" target="_blank">Lukas 6:31 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Wenn ihr also vor dem Altar im Tempel steht, um zu opfern, und es fällt euch mit einem Mal ein, dass jemand etwas gegen euch hat, dann lasst euer Opfer vor dem Altar liegen, geht zu dem Betreffenden und versöhnt euch mit ihm. Erst dann kommt zurück und bringt Gott euer Opfer dar.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us5%2C23-24" target="_blank">Matthäus 5,23-24 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
 						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us7%2C22-23" target="_blank">Matthäus 7,22-23 (GNB)</a></div>
 					</div>
-					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
