--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -197,6 +197,7 @@
 						<div class="text">Geht jetzt zu eurem Festmahl, esst und trinkt und gebt auch denen etwas ab, für die nichts vorbereitet ist! Heute ist ein Festtag für Jahwe. Seid nicht traurig, denn die Freude an Jahwe ist euer Schutz!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Nehemia8%2C10" target="_blank">Nehemia 8,10 (NeÜ)</a></div>
 					</div>
+					<!-- Prediger 9:7 -->
 					<!--
 					<div class="moreinfo">
 						<div class="text">Freut euch mit den Fröhlichen! Weint aber auch mit den Trauernden!</div>
@@ -218,6 +219,12 @@
 					<div class="label">Glaube/Vertrauen</div>
 				</div>
 				<div class="moreinfos">
+					<!-- 1.Mose 15:6 -->
+					<!-- Apostelgeschichte 16:30-31 -->
+					<!-- Sprüche 3:5 -->
+					<!-- Psalmen 37:5 -->
+					<!-- 1.Korinther 16:13-14 -->
+					<!-- Hiob 19:25 -->
 					<div class="moreinfo">
 						<div class="text">Da sagte Jesus zu ihnen: »Ich versichere euch: Wenn ihr fest glaubt und nicht zweifelt, könnt ihr auch solche Dinge tun und noch viel mehr als das. Ihr könnt sogar zu diesem Berg sagen: ›Hebe dich empor und wirf dich ins Meer‹, und es wird geschehen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C21" target="_blank">Matthäus 21,21 (NLB)</a></div>
@@ -246,6 +253,7 @@
 						<div class="text">Gott allein kann euch davor bewahren, vom rechten Weg abzuirren. So könnt ihr von Schuld befreit und voller Freude vor ihn treten und ihn in seiner Herrlichkeit sehen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Judas24" target="_blank">Judas 24 (HFA)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Der HERR wird für euch kämpfen, ihr selbst braucht gar nichts zu tun.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/2.Mose14%2C14" target="_blank">2.Mose 14,14 (GNB)</a></div>
@@ -254,6 +262,7 @@
 						<div class="text">Denkt an den Regen und den Schnee! Sie fallen vom Himmel und bleiben nicht ohne Wirkung: Sie tränken die Erde und machen sie fruchtbar; alles sprießt und wächst. So bekommt der Bauer wieder Samen für die nächste Aussaat, und er hat genügend Brot zu essen. Genauso ist mein Wort: Es bleibt nicht ohne Wirkung, sondern erreicht, was ich will, und führt das aus, was ich ihm aufgetragen habe.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja55%2C10-11" target="_blank">Jesaja 55,10-11 (HFA)</a></div>
 					</div>
+					-->
 					<div class="moreinfo">
 						<div class="text">Da sagte Jesus: »Du glaubst, weil du mich gesehen hast. Wie glücklich können sich erst die schätzen, die mich nicht sehen und trotzdem glauben!«</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes20%2C29" target="_blank">Johannes 20,29 (HFA)</a></div>
@@ -262,7 +271,7 @@
 						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
 					</div>
-				
+					<!-- Apostelgeschichte 4:12 -->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -280,6 +289,10 @@
 					<div class="label">Taten</div>
 				</div>
 				<div class="moreinfos">
+					<!-- Jakobus 2:26 -->
+					<!-- Jesaja 1:17 -->
+					<!-- 1.Korinther 15:58 -->
+					<!-- Psalmen 82:3 -->
 					<div class="moreinfo">
 						<div class="text">In Christus Jesus sind wir Gottes Meisterstück. Er hat uns geschaffen, dass wir tun, was wirklich gut ist, gute Werke, die er für uns vorbereitet hat, dass wir damit unser Leben gestalten.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Epheser2%2C10" target="_blank">Epheser 2,10 (NeÜ)</a></div>
@@ -486,6 +499,8 @@
 						<div class="text">Darum soll jeder sein Leben genau prüfen. Dann wird er sich über seine guten Taten freuen können, aber keinen Grund zur Überheblichkeit haben. Denn jeder ist für sein eigenes Tun vor Gott verantwortlich. Das ist schon schwer genug!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Galater6%2C4-5" target="_blank">Galater 6,4-5 (HFA)</a></div>
 					</div>
+					<!-- Sprüche 25:26 -->
+					<!-- 2.Korinther 5:10 -->
 				</div>
 			</div>
 			<div class="btnframe">
@@ -493,6 +508,11 @@
 					<div class="label">Gebet</div>
 				</div>
 				<div class="moreinfos">
+					<!-- Epheser 6:18 -->
+					<!-- Jakobus 5:16 -->
+					<!-- Lukas 11:9 -->
+					<!-- Markus 11:24 -->
+					<!-- Kolosser 4:2 -->
 					<div class="moreinfo">
 						<div class="text">Alles, was ihr im vertrauensvollen Gebet verlangt, werdet ihr bekommen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C22" target="_blank">Matthäus 21,22 (NLB)</a></div>
@@ -509,6 +529,9 @@
 						<div class="text">In dieser Zeit verließ Jesus die Stadt und stieg auf einen Berg, um zu beten. Die ganze Nacht hindurch sprach er im Gebet mit Gott.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas6%2C12" target="_blank">Lukas 6,12 (HFA)</a></div>
 					</div>
+					<!-- Johannes 15:7 -->
+					<!-- 1.Johannes 5:14-15 -->
+					<!-- Johannes 16:24 -->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -558,6 +581,23 @@
 						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
 					</div>
+					<!-- 1.Petrus 3:9 -->
+					<!-- Römer 12:9-12 -->
+					<!-- Römer 12:21 -->
+					<!-- 1.Korinther 10:31 -->
+					<!-- Epheser 4:29-32 -->
+					<!-- Epheser 5:4-7 -->
+					<!-- Jakobus 5:9 -->
+					<!-- Jakobus 4:11-12 -->
+					<!-- Epheser 5:18-19 -->
+					<!-- Lukas 3:11 -->
+					<!-- Kolosser 1:10 -->
+					<!-- Epheser 4:25 -->
+					<!-- Kolosser 3:8-11 -->
+					<!-- 1.Korinther 6:7 -->
+					<!-- 3.Mose 19:33-34 -->
+					<!-- Philipper 4:8-9 -->
+					<!-- Titus 3:2 -->
 					<!--
 					<div class="moreinfo">
 						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
@@ -587,6 +627,8 @@
 				</div>
 			</div>
 			-->
+			<!-- Weissheit -->
+			<!-- Trost -->
 		</div>
 	</body>
 </html>
