Weitere Bibelstellen eingebaut bzw. dafür vorbereitet

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -197,7 +197,10 @@
 						<div class="text">Geht jetzt zu eurem Festmahl, esst und trinkt und gebt auch denen etwas ab, für die nichts vorbereitet ist! Heute ist ein Festtag für Jahwe. Seid nicht traurig, denn die Freude an Jahwe ist euer Schutz!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Nehemia8%2C10" target="_blank">Nehemia 8,10 (NeÜ)</a></div>
 					</div>
-					<!-- Prediger 9:7 -->
+					<div class="moreinfo">
+						<div class="text">Darum iss dein Brot und trink deinen Wein und sei fröhlich dabei! So hat es Gott für die Menschen vorgesehen und so gefällt es ihm.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Prediger9%2C7" target="_blank">Prediger 9:7 (GNB)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text">Freut euch mit den Fröhlichen! Weint aber auch mit den Trauernden!</div>
@@ -219,12 +222,30 @@
 					<div class="label">Glaube/Vertrauen</div>
 				</div>
 				<div class="moreinfos">
-					<!-- 1.Mose 15:6 -->
-					<!-- Apostelgeschichte 16:30-31 -->
-					<!-- Sprüche 3:5 -->
-					<!-- Psalmen 37:5 -->
-					<!-- 1.Korinther 16:13-14 -->
-					<!-- Hiob 19:25 -->
+					<div class="moreinfo">
+						<div class="text">Und Abram glaubte dem HERRN und der HERR erklärte ihn wegen seines Glaubens für gerecht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Mose15%2C6" target="_blank">1.Mose 15:6 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Dann führte er die beiden hinaus und fragte sie: »Ihr Herren, was muss ich tun, um gerettet zu werden?« »Glaube an den Herrn Jesus, dann werden du und alle, die in deinem Haus leben, gerettet«, erwiderten Paulus und Silas.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte16%2C30-31" target="_blank">Apostelgeschichte 16:30-31 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Verlass dich nicht auf deinen eigenen Verstand, sondern vertraue voll und ganz dem HERRN!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Spr%C3%BCche3%2C5" target="_blank">Sprüche 3:5 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Überlass dem HERRN die Führung deines Lebens und vertraue auf ihn, er wird es richtig machen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm37%2C5" target="_blank">Psalmen 37:5 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Seid wachsam und steht fest im Glauben! Seid entschlossen und stark! Bei allem, was ihr tut, lasst euch von der Liebe leiten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther16%2C13-14" target="_blank">1.Korinther 16:13-14 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"> Aber ich weiß, dass mein Erlöser lebt, und als der Letzte wird er über dem Staub sich erheben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/LUT/Hiob19%2C25" target="_blank">Hiob 19:25 (LUT)</a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text">Da sagte Jesus zu ihnen: »Ich versichere euch: Wenn ihr fest glaubt und nicht zweifelt, könnt ihr auch solche Dinge tun und noch viel mehr als das. Ihr könnt sogar zu diesem Berg sagen: ›Hebe dich empor und wirf dich ins Meer‹, und es wird geschehen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C21" target="_blank">Matthäus 21,21 (NLB)</a></div>
@@ -271,7 +292,12 @@
 						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
 					</div>
-					<!-- Apostelgeschichte 4:12 -->
+					<!--  TODO
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Apostelgeschichte 4:12</a></div>
+					</div>
+					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -289,10 +315,24 @@
 					<div class="label">Taten</div>
 				</div>
 				<div class="moreinfos">
-					<!-- Jakobus 2:26 -->
-					<!-- Jesaja 1:17 -->
-					<!-- 1.Korinther 15:58 -->
-					<!-- Psalmen 82:3 -->
+					<!-- TODO
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="Jakobus 2:26" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="Jesaja 1:17" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="1.Korinther 15:58" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="Psalmen 82:3" target="_blank"></a></div>
+					</div>
+					-->
 					<div class="moreinfo">
 						<div class="text">In Christus Jesus sind wir Gottes Meisterstück. Er hat uns geschaffen, dass wir tun, was wirklich gut ist, gute Werke, die er für uns vorbereitet hat, dass wir damit unser Leben gestalten.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Epheser2%2C10" target="_blank">Epheser 2,10 (NeÜ)</a></div>
@@ -508,11 +548,28 @@
 					<div class="label">Gebet</div>
 				</div>
 				<div class="moreinfos">
-					<!-- Epheser 6:18 -->
-					<!-- Jakobus 5:16 -->
-					<!-- Lukas 11:9 -->
-					<!-- Markus 11:24 -->
-					<!-- Kolosser 4:2 -->
+					<!-- TODO
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Epheser 6:18</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jakobus 5:16</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Lukas 11:9</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Markus 11:24</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Kolosser 4:2</a></div>
+					</div>
+					-->
 					<div class="moreinfo">
 						<div class="text">Alles, was ihr im vertrauensvollen Gebet verlangt, werdet ihr bekommen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Matth%C3%A4us21%2C22" target="_blank">Matthäus 21,22 (NLB)</a></div>
@@ -529,9 +586,20 @@
 						<div class="text">In dieser Zeit verließ Jesus die Stadt und stieg auf einen Berg, um zu beten. Die ganze Nacht hindurch sprach er im Gebet mit Gott.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas6%2C12" target="_blank">Lukas 6,12 (HFA)</a></div>
 					</div>
-					<!-- Johannes 15:7 -->
-					<!-- 1.Johannes 5:14-15 -->
-					<!-- Johannes 16:24 -->
+					<!-- TODO
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Johannes 15:7</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">1.Johannes 5:14-15</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Johannes 16:24</a></div>
+					</div>
+					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -581,23 +649,76 @@
 						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
 					</div>
-					<!-- 1.Petrus 3:9 -->
-					<!-- Römer 12:9-12 -->
-					<!-- Römer 12:21 -->
-					<!-- 1.Korinther 10:31 -->
-					<!-- Epheser 4:29-32 -->
-					<!-- Epheser 5:4-7 -->
-					<!-- Jakobus 5:9 -->
-					<!-- Jakobus 4:11-12 -->
-					<!-- Epheser 5:18-19 -->
-					<!-- Lukas 3:11 -->
-					<!-- Kolosser 1:10 -->
-					<!-- Epheser 4:25 -->
-					<!-- Kolosser 3:8-11 -->
-					<!-- 1.Korinther 6:7 -->
-					<!-- 3.Mose 19:33-34 -->
-					<!-- Philipper 4:8-9 -->
-					<!-- Titus 3:2 -->
+					<!-- TODO
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">1.Petrus 3:9</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Römer 12:9-12</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Römer 12:21</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">1.Korinther 10:31</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Epheser 4:29-32</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Epheser 5:4-7</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jakobus 5:9</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jakobus 4:11-12</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Epheser 5:18-19</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Lukas 3:11</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Kolosser 1:10</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Epheser 4:25</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Kolosser 3:8-11</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">1.Korinther 6:7</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">3.Mose 19:33-34</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Philipper 4:8-9</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Titus 3:2</a></div>
+					</div>
+					-->
 					<!--
 					<div class="moreinfo">
 						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
@@ -629,6 +750,7 @@
 			-->
 			<!-- Weissheit -->
 			<!-- Trost -->
+			<!-- Hiob 19:27 -->
 		</div>
 	</body>
 </html>
